Changing photos by pressing buttons

--- a/Index.html
+++ b/Index.html
@@ -42,17 +42,17 @@
   </header>
   <main>
     <section class="sectionOpera restrictions1">
-      <div class="bannerOpera">
-        <img src="/images/img-opera-scene-2.jfif" alt="#">
+      <div id="main-img" class="bannerOpera">
+        <img id="img-scene-1" src="/images/img-opera-scene-2.jfif" alt="#">
       </div>
       <div class="sectionOperaBlock">
-        <div class="sectionOperaCard">
-          <img src="/images/img-opera-scene-1.jfif" alt="#">
+        <div id="view-button" class="sectionOperaCard">
+          <img id="img-scene-2" src="/images/img-opera-scene-1.jfif" alt="#">
           <p>Opera VS Operetta</p>
         </div>
 
-        <div class="sectionOperaCard">
-          <img src="/images/img-opera-seats.jfif" alt="#">
+        <div id="view-button" class="sectionOperaCard">
+          <img id="img-seats" src="/images/img-opera-seats.jfif" alt="#">
           <p>Antonio Vivaldi. Season</p>
         </div>
       </div>
@@ -303,5 +303,7 @@
       </div>
   </div>
   </footer>
+
+  <script src="js/view-opera.js"></script>
 </body>
 </html>
