Added a module, general file

--- a/Index.html
+++ b/Index.html
@@ -304,6 +304,6 @@
   </div>
   </footer>
 
-  <script src="js/view-opera.js"></script>
+  <script type='module' src="js/general.js"></script>
 </body>
 </html>
