Created a new file for News section and added an animation

--- a/Index.html
+++ b/Index.html
@@ -141,22 +141,22 @@
     <section class="newsCalendar restrictions2">
       <div class="newsContent">
         <p id="news-section" class="NewsTitelText">News</p>
-        <div class="minipage">
+        <div id="example" class="minipage">
           <div class="minipageBox">
-              <img src="./images/img-people.jfif" alt="Photo">
+              <img id="imgElem" src="./images/img-dragon.jfif" alt="Photo">
             <div class="minipageText">
-              <p>Postponements/Cancellations of Events</p>
-              <p>04/11/2023 at 19.00 o'clock. - concert
+              <p id="titleElem">Postponements/Cancellations of Events</p>
+              <p id="descriptionElem">04/11/2023 at 19.00 o'clock. - concert
                 "Opera vs. Operetta" - POSTPONED to 06/05/2023
                 at 19.00 o'clock.</p>
             </div>
           </div>
 
           <div class="minipageBox">
-            <img src="./images/img-dragon.jfif" alt="Photo">
+            <img id="imgElem2" src="./images/img-dragon.jfif" alt="Photo">
             <div class="minipageText">
-              <p>Postponements/Cancellations of Events</p>
-              <p>04/11/2023 at 19.00 o'clock. - concert
+              <p id="titleElem2">Postponements/Cancellations of Events</p>
+              <p id="descriptionElem2">04/11/2023 at 19.00 o'clock. - concert
                 "Opera vs. Operetta" - POSTPONED to 06/05/2023
                 at 19.00 o'clock.</p>
             </div>
@@ -304,5 +304,6 @@
 
   <script type='module' src="js/general.js"></script>
   <script src="js/navbar.js"></script>
+  <script src="js/news.js"></script>
 </body>
 </html>
