New photos on the news cards

--- a/Index.html
+++ b/Index.html
@@ -141,7 +141,7 @@
     <section class="newsCalendar restrictions2">
       <div class="newsContent">
         <p id="news-section" class="NewsTitelText">News</p>
-        <div id="example" class="minipage">
+        <div class="minipage">
           <div class="minipageBox">
               <img id="imgElem" src="./images/img-dragon.jfif" alt="Photo">
             <div class="minipageText">
