Made duplicate cards in the brief section by using function constructor

--- a/Index.html
+++ b/Index.html
@@ -236,34 +236,7 @@
           <p>All events</p>
         </div>
       </div>
-      <div class="anonsesdodo">
-        <div class="anonsesBox">
-          <div class="anonsesDate">
-            <p>3</p>
-            <p>June</p>
-          </div>
-          <div>
-            <p>«CENTURY named after SINATRA»</p>
-          </div>
-        </div>
-        <div class="anonsesBox">
-          <div class="anonsesDate">
-            <p>3</p>
-            <p>June</p>
-          </div>
-          <div>
-            <p>«CENTURY named after SINATRA»</p>
-          </div>
-        </div>
-        <div class="anonsesBox">
-          <div class="anonsesDate">
-            <p>3</p>
-            <p>June</p>
-          </div>
-          <div>
-            <p>«CENTURY named after SINATRA»</p>
-          </div>
-        </div>
+      <div id="brief-container" class="anonsesdodo">
         <div class="anonsesBox">
           <div class="anonsesDate">
             <p>3</p>
@@ -301,9 +274,9 @@
       </div>
   </div>
   </footer>
-
   <script type='module' src="js/general.js"></script>
   <script src="js/navbar.js"></script>
   <script src="js/news.js"></script>
+  <script src="js/brief.js"></script>
 </body>
 </html>
