--- a/Index.html
+++ b/Index.html
@@ -41,9 +41,9 @@
   <main>
     <section class="sectionOpera restrictions1">
       <div id="main-img" class="bannerOpera">
-        <img id="img-scene-1" src="./images/img-opera-scene-blue.jfif" alt="#">
+        <img id="img-scene-1" src="./images/img-opera-scene-blue.jfif" alt="#"> 
       </div>
-      <div class="sectionOperaBlock">
+      <div id="viewBtnsContainer" class="sectionOperaBlock">
         <div id="view-button" class="sectionOperaCard">
           <img id="img-scene-2" src="./images/img-opera-scene-red.jfif" alt="#">
           <p>Opera VS Operetta</p>
@@ -274,8 +274,9 @@
       </div>
   </div>
   </footer>
+  <script src="js/view-opera.js"></script>
   <script type='module' src="js/general.js"></script>
-  <script src="js/navbar.js"></script>
+  <script type="module" src="js/navbar.js"></script>
   <script src="js/news.js"></script>
   <script src="js/brief.js"></script>
 </body>
