Solved a small issue with cards from poster section

--- a/Index.html
+++ b/Index.html
@@ -135,7 +135,7 @@
         </div>
         </div>
 
-        <div id="extraCardss" class="extra-cards">
+        <div id="extraCardss" class="extra-cards extra-cards-box">
             <div class="Card">
               <div class="CardFirstBox">
                 <div class="CardDate">
