Added all the months of the year to the calendar in the news section

--- a/Index.html
+++ b/Index.html
@@ -278,10 +278,10 @@
         </div>
         <div class="calendarBottom">
           <div class="calendarMonth">
-            <p>July</p>
+            <p id="month">January</p>
             <div>
-              <button> < </button>
-              <button> > </button>
+              <button id="backBtn"> < </button>
+              <button id="nextBtn"> > </button>
             </div>
           </div>
           <div class="calendarDate">
@@ -385,6 +385,7 @@
   <script src="js/navbar.js"></script>
   <script src="js/news.js"></script>
   <script src="js/brief.js"></script>
+  <script src="js/newsCalendar.js"></script>
   <script src="js/poster.js"></script>
 </body>
 </html>
