Created a window after clicking on the brief buttons

--- a/Index.html
+++ b/Index.html
@@ -353,6 +353,16 @@
           </div>
         </div>
       </div>
+      <div class="anounce-modal" id="modal">
+        <div class="modal-header">
+          <div class="title">Example Title</div>
+          <button id="closeBtn" class="btn-close">×</button>
+        </div>
+        <div class="modal-section">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        </div>
+      </div>
+      <div id="overlay" class="overlay"></div>
     </section>
   </main>
   <footer>
