Made the right information on the cards

--- a/Index.html
+++ b/Index.html
@@ -354,14 +354,20 @@
         </div>
       </div>
       <div class="anounce-modal" id="modal">
-        <div class="modal-header">
-          <div class="title">Example Title</div>
-          <button id="closeBtn" class="btn-close">×</button>
+        <div id="closeBtn">X</div>
+        <div class="modal_box-img">
+          <img id="modal-img" src="" alt="#">
         </div>
-        <div class="modal-section">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        <div class="modal_box-title">
+          <div class="modal_box-date">
+            <div id="modal-dateDay"></div>
+            <div id="modal-dateMonth"></div>
+          </div>
+          <div id="modal-title"></div>
         </div>
+        <div id="modal-description"></div>
       </div>
+
       <div id="overlay" class="overlay"></div>
     </section>
   </main>
