corrected the paths to images

--- a/Index.html
+++ b/Index.html
@@ -109,7 +109,7 @@
             </div>
 
             <div class="CardImg">
-              <img src="/images/female-pink.avif" alt="Photo">
+              <img src="./images/female-pink.avif" alt="Photo">
             </div>
           </div>
 
@@ -145,7 +145,7 @@
                 </div>
       
                 <div class="CardImg">
-                  <img src="/images/img-opera-event.jpg" alt="Photo">
+                  <img src="./images/img-opera-event.jpg" alt="Photo">
                 </div>
               </div>
       
